# coidb

./: .gitignore  Dockerfile  README.md  config.yml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
src/coidb/: __init__.py  __main__.py  config.yml  snk.yaml
src/coidb/cli/: __init__.py
src/coidb/scripts/: batch_split_bins.py  bold2fasta.py  consensus_taxonomy.py  fill_missing.py  filter.py  fix_non_unique_lineages.py  format.py  format_fasta.py  match_names.py  parse_backbone.py  stats.py
src/coidb/workflow/: Snakefile
src/coidb/workflow/profiles/dardel/: config.yaml
src/coidb/workflow/profiles/slurm/: config.yaml
src/coidb/workflow/rules/: match_names.smk
src/coidb/workflow/schemas/: config.schema.yaml
src/coidb/workflow/scripts/: fill_missing.py  filter.py  format_fasta.py
tests/: config1.yml  config2.yml  config3.yml  info.tsv  test.py
workflow/: Snakefile
workflow/schemas/: config.schema.yaml
workflow/scripts/: consensus_taxonomy.py  filter.py  format_fasta.py
