[project]
dependencies = ["snk-cli==0.7.2"]
name = "coidb"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "John Sundh", email = "john.sundh@scilifelab.se" }]
version = "0.6.0"

[project.scripts]
coidb = "coidb.cli:coidb"
filter-records = "coidb.scripts.filter:main"
fill-missing = "coidb.scripts.fill_missing:main"
coidb-format = "coidb.scripts.format:main"
consensus-taxonomy = "coidb.scripts.consensus_taxonomy:main"
parse-backbone = "coidb.scripts.parse_backbone:main"
match-names = "coidb.scripts.match_names:main"
bold2fasta = "coidb.scripts.bold2fasta:main"
batch-split-bins = "coidb.scripts.batch_split_bins:main"
fix-nonunique-lineages = "coidb.scripts.fix_non_unique_lineages:main"

[project.urls]
Documentation = "https://github.com/insect-biome-atlas/coidb#readme"
Issues = "https://github.com/insect-biome-atlas/coidb/issues"
Source = "https://github.com/insect-biome-atlas/coidb"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
